--- a/FT_rapport.qmd
+++ b/FT_rapport.qmd
@@ -24,7 +24,7 @@ Dette dokument giver overblik over resultatet for Folketingsvalget, og kan opdat
 #| echo: false
 
 library(pacman)
-p_load(tidyverse, readr, xml2, XML, janitor, flatxml, reshape2, maps, sf, reticulate)
+p_load(tidyverse, readr, xml2, XML, janitor, flatxml, reshape2, maps, sf, reticulate, DT, htmltools)
 
 ```
 
