Ny rapport struktur

--- a/epvalg/EP_rapport_2009.qmd
+++ b/epvalg/EP_rapport_2009.qmd
@@ -27,6 +27,8 @@ p_load(tidyverse, xml2, readr, janitor, kableExtra, jsonlite, reticulate)
 
 ```
 
+Senest opdateret: `r format(with_tz(Sys.time(), "CET"), "%d/%m/%Y %H:%M:%S")`
+
 ```{r}
 #| label: xml_links
 
@@ -77,67 +79,28 @@ import xmltodict
 
 
 valg_url = r.ep_xml
-land = hent_data_ep(xml_url = valg_url, geo_kreds = "land")
-land_person = hent_data_ep(xml_url = valg_url, geo_kreds = "land", stemmer = "person")
-# ops_person = hent_data_ep(xml_url = valg_url, geo_kreds = "opstillingskredse", stemmer = "person")
+valg_type = r.type
+land = hent_data_ep(xml_url = valg_url, geo_kreds = "land", valg_type = valg_type)
+if (valg_type == "fintælling"):
+  land_person = hent_data_ep(xml_url = valg_url, geo_kreds = "land", stemmer = "person")
 
+
+```
+
+```{r}
+#| label: er_der_resultater
+
+resultat_klar <- is.data.frame(py$land)
 
 ```
 
 
 ```{r}
-#| label: partiliste
+#| label: koer_child_qmd
+#| eval: !expr resultat_klar
+#| child: EP_rapport_regn_valg.qmd
 
-partier_partiliste <- xml_link_oversigt %>% 
-  filter(aar == .env$aar & valg == "EP") %>% 
-  filter(type == .env$type) %>% 
-  pull(partiliste) %>% 
-  str_split("") %>% 
-  unlist()
-
-partiliste <- py$land %>% 
-  as_tibble() %>% 
-  clean_names() %>% 
-  mutate(partiliste = if_else(bogstav %in% partier_partiliste, TRUE, FALSE)) %>% 
-  distinct(id_parti, bogstav, partiliste)
 
 ```
 
-```{r}
-#| label: valgforbund
-
-source("valgforbund.R")
-
-```
-
-
-```{r}
-#| label: koer_partier
-
-## for manuel kørsel
-# setwd(paste(getwd(), "epvalg", sep = "/"))
-
-source("epvalg_partier.R")
-
-if (isTRUE(fintael)){
-  source("Personlige stemmer.R")
-}
-
-```
-
-
-```{r}
-#| label: output_parti_stemmer
-#| child: EP_rapport_parti_stemmer.qmd
-
-```
-
-
-
-```{r}
-#| label: output_personlige_stemmer
-#| child: EP_rapport_personlige_stemmer.qmd
-#| eval: !expr fintael
-
-```
-
+`r if(!resultat_klar){"Resultat er ikke klar endnu"}`
