--- a/epvalg/EP_rapport_2009.qmd
+++ b/epvalg/EP_rapport_2009.qmd
@@ -48,14 +48,14 @@ valg_dato <- xml_link_oversigt %>%
 fintael <- valg_dato < today("Europe/Copenhagen")
 
 if(fintael){
-  type <- "fintælling"
+  valg_type <- "fintælling"
 } else {
-  type <- "valgaften"
+  valg_type <- "valgaften"
 }
 
 ep_xml <- xml_link_oversigt %>% 
   filter(aar == .env$aar & valg == "EP") %>% 
-  filter(type == .env$type) %>% 
+  filter(type == .env$valg_type) %>% 
   pull(xml_link)
 
 
@@ -79,7 +79,7 @@ import xmltodict
 
 
 valg_url = r.ep_xml
-valg_type = r.type
+valg_type = r.valg_type
 land = hent_data_ep(xml_url = valg_url, geo_kreds = "land", valg_type = valg_type)
 if (valg_type == "fintælling"):
   land_person = hent_data_ep(xml_url = valg_url, geo_kreds = "land", stemmer = "person")
