--- a/epvalg/EP_rapport_regn_valg.qmd
+++ b/epvalg/EP_rapport_regn_valg.qmd
@@ -11,7 +11,7 @@ editor_options:
 
 partier_partiliste <- xml_link_oversigt %>% 
   filter(aar == .env$aar & valg == "EP") %>% 
-  filter(type == valg_type) %>% 
+  filter(type == .envvalg_type) %>% 
   pull(partiliste) %>% 
   str_split("") %>% 
   unlist()
