--- a/fodbold_kalender/Dansk fodboldkort.qmd
+++ b/fodbold_kalender/Dansk fodboldkort.qmd
@@ -54,16 +54,6 @@ danske_stadion_geo <- danske_stadion %>%
 
 
 
-
-# danmark_geo_json <- request("https://api.dataforsyningen.dk/storkredse?format=geojson") %>% 
-#   req_perform() %>%
-#   resp_body_raw() %>%
-#   rawToChar() %>%
-#   st_read(quiet = TRUE) %>%
-#   filter(navn != "Bornholm") %>%
-#   st_make_valid() %>% 
-#   st_combine()
-
 danmark_geo_json <- st_read(here("fodbold_kalender", "data", "denmark-detailed-boundary_896.geojson"), quiet = TRUE)
 
 ```
@@ -75,9 +65,14 @@ danmark_geo_json <- st_read(here("fodbold_kalender", "data", "denmark-detailed-b
 kampprogram_geo <- kampprogram_danmark %>% 
   left_join(danske_stadion_geo, by = join_by(stadion == stadion_navn))
 
-
+manglende_geo <- kampprogram_geo %>% 
+  filter(is.na(longitude) | is.na(latitude)) %>% 
+  distinct(spilleby) %>% 
+  pull()
 
 ```
+
+`r if (!is_empty(manglende_geo)){paste0("Der er spillebyer, hvor der ikke er geo-data. Det drejer sig om: ", manglende_geo)}`
 
 ```{r}
 #| label: laver plots
