--- a/FT_rapport.qmd
+++ b/FT_rapport.qmd
@@ -506,7 +506,7 @@ Forsøg på at lave et kort med valgdata
 
 ```{r}
 #| label: Henter adresser fra DAWA
-#| eval: false
+#| eval: true
 
 library(httr)
 library(jsonlite)
@@ -541,7 +541,7 @@ storkreds_geo_data1 <- storkreds_geo_data %>%
 
 ```{r}
 #| label: kort
-#| eval: false
+#| eval: true
 
 
 ggplot(data = storkreds_geo_data1 %>% st_make_valid()) +
