--- a/komvalg_shiny.qmd
+++ b/komvalg_shiny.qmd
@@ -446,49 +446,30 @@ server <- function(input, output, session) {
   
   
   ##### Laver uden at der må indgås valgforbund ########
-  uden_forbund <- reactive({
-    calc_results <- uden_valgforbund(values$df, input$mandater)
-  })
-  
-  output$uden_valgforbund <- renderRHandsontable({
-    results <- uden_forbund()
-    rhandsontable(results, readOnly = TRUE, rowHeaders = NULL,
-                  colHeaders = c("Parti", "Stemmer (%)", "Antal mandater")) %>% 
-      hot_table(highlightCol = TRUE, highlightRow = TRUE,
-                stretchH = "all") %>% 
-      hot_col(2, format = "0.00 %")
-  })
-
-  
-  # kvotienter
-  uden_valgforbund_kvotienter_res <- reactive({
-    calc_results <- uden_valgforbund_kvotienter(values$df, input$mandater) %>% 
-      kvotient_tab_format(sorting = "Parti", type = "Parti") %>%
-      rename(Divisor = dhont)
-  })
-  
-  uden_valgforbund_kvotienter_highlight <- reactive({
-    calc_results <- uden_valgforbund_kvotienter(values$df, input$mandater) %>% 
-      mandat_pos_format(sorting = "Parti", type = "Parti")
-  })
-  
-  
-  output$uden_valgforbund_kvotient <- renderRHandsontable({
-    results <- uden_valgforbund_kvotienter_res()
-    
-    highlight <- uden_valgforbund_kvotienter_highlight()
-    
-    rhandsontable(results, readOnly = TRUE,
-                  col_highlight = highlight$col,
-                  row_highlight = highlight$row,
-                  rowHeaders = NULL,
-                  digits = 2) %>% 
-      hot_cols(renderer = myrenderer) %>%
-      hot_col("Divisor", halign = "htLeft")
-    
-  })
-  
-  ### Sammenligning, med og uden valgforbund
+  myrenderer2 <- "function(instance, td, row, col, prop, value, cellProperties) {
+       Handsontable.renderers.TextRenderer.apply(this, arguments);
+       
+         // Format column 2 as percentage
+        if (col === 1) { // Column 2 (0-indexed)
+          if (typeof value === 'number') {
+            td.innerHTML = (value * 100).toFixed(2) + ' %';
+          }
+          td.style.textAlign = 'right';
+        }
+       
+       if (instance.params) {
+         hcols = instance.params.col_highlight
+         hcols = hcols instanceof Array ? hcols : [hcols]
+         hrows = instance.params.row_highlight
+         hrows = hrows instanceof Array ? hrows : [hrows]
+         
+         for (i = 0; i < hcols.length; i++) { 
+           if (hcols[i] == col && hrows[i] == row) {
+             td.style.background = '#FFFF00';
+           }
+         }
+       }
+     }"
   
   versus_regn <- reactive({
     calc_results <- regn_parti(values$df, input$mandater) %>% 
@@ -500,16 +481,40 @@ server <- function(input, output, session) {
       select(Parti, Stemmer_pct, med_forbund, uden_forbund) 
   })
   
+  versus_regn_pos <- reactive({
+    calc_results <- regn_parti(values$df, input$mandater) %>% 
+      rename(med_forbund = Antal_mandater) %>% 
+      left_join(uden_valgforbund(values$df, input$mandater) %>% 
+                  rename(uden_forbund = Antal_mandater) %>% 
+                  select(-Stemmer_pct), 
+                by = "Parti") %>% 
+      select(Parti, Stemmer_pct, med_forbund, uden_forbund) %>% 
+      mutate(forskel = med_forbund != uden_forbund) %>% 
+      select(forskel) %>% 
+      as.matrix() %>% 
+      which(arr.ind = TRUE) %>% 
+      as_tibble() %>% 
+      mutate(row = row-1,
+             col = col+1)
+      
+      
+  })
+  
   output$versus <- renderRHandsontable({
     results <- versus_regn()
     
+    pos <- versus_regn_pos()
+    
     rhandsontable(results, rowHeaders = NULL,
-                  colHeaders = c("Parti", 
+                  colHeaders = c("Parti",
                                  "Stemmer (%)",
-                                 "Antal mandater <br> med valgforbund", 
-                                 "Antal mandater <br> uden valgforbund")) %>% 
-      hot_col(2, format = "0.00 %") %>% 
-      hot_table(stretchH = "all")
+                                 "Antal mandater <br> med valgforbund",
+                                 "Antal mandater <br> uden valgforbund"),
+                  col_highlight = pos$col,
+                  row_highlight = pos$row) %>%
+      hot_table(stretchH = "all") %>%
+      hot_cols(renderer = myrenderer2)
+      
     
   })
   
