--- a/index.qmd
+++ b/index.qmd
@@ -7,4 +7,4 @@ toc: false
 
 This website containing different hobby project regarding data. I have a background in political science and love sports. So all topics on this page will revolve around data in combination with either politics or sports (and if really crazy, both).
 
-[testTEST](komvalg_shiny/komvalg_shiny.qmd)
+[testTEST](komvalg_shiny.qmd)
