--- a/index.qmd
+++ b/index.qmd
@@ -5,6 +5,6 @@ toc: false
 
 ## Welcome!
 
-This website containing different hobby project regarding data. I have a background in political science and love sports. So all topics on this page will revolve around data in combination with either politics or sports (and if really crazy, both).
+This website containing different hobby project regarding data. I have a background in political science and love sports. Therefore topics on this page will most likely revolve around data in combination with either politics or sports.
 
 [testTEST](komvalg_shiny.qmd)
