--- a/about.qmd
+++ b/about.qmd
@@ -5,3 +5,6 @@ title: "About"
 I have studied political science at the Univeristy of Copenhagen. I currently work at Statistics Denmark.
 
 I like to collect insights from data and find new ways to use data. Mainly working with data analysis in R, but collecting data from different sources, SQL servers, APIs or web scraping.
+
+I am open to consulting work, so if you need help working with data analysis or visualisation in R, please feel free to contact me on ethranholm@gmail.com
+
