--- a/fodbold_kalender/Tysk fodboldkort2.qmd
+++ b/fodbold_kalender/Tysk fodboldkort2.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Tysk Regionalliga"
+title: "Tysk fodboldkalender"
 output: html_document
 editor_options: 
   chunk_output_type: console
@@ -15,10 +15,10 @@ library(pacman)
 p_load(tidyverse, ggiraph, cowplot, RColorBrewer, sf, here)
 
 
-kampprogram_tyskland <- read_rds(here("fodbold_kalender", "data", "kampprogram.rds")) %>%
+kampprogram_tyskland <- read_rds(here("fodbold_kalender", "data", "kampprogram_sportradar.rds")) %>%
   filter(land == "Germany") %>%
   unnest(data) %>% 
-  filter(str_detect(liga, "Regionalliga"))
+  filter(str_detect(liga, "Regionalliga", negate = TRUE))
 
 if(nrow(kampprogram_tyskland) == 0){
   kampprogram_klar <- FALSE
@@ -37,36 +37,15 @@ if(nrow(kampprogram_tyskland) == 0){
 tyskland_geo_json <- st_read("https://raw.githubusercontent.com/isellsoap/deutschlandGeoJSON/main/1_deutschland/2_hoch.geo.json", quiet = TRUE)
 
 
-## finder byer
-tyske_byer_geo <- readRDS(here("fodbold_kalender", "data", "tyske_byer.Rds"))
-
-tyske_byer_geo_filter <- tyske_byer_geo %>% 
-  semi_join(kampprogram_tyskland, by = c("name" = "spilleby")) %>% 
-  filter(population == max(population), .by = "name")
-
-
-```
-
-
-```{r}
-#| label: kampprogram_geo
-#| echo: false
-#| eval: !expr kampprogram_klar
-
-kampprogram_geo <- kampprogram_tyskland %>% 
-  left_join(tyske_byer_geo_filter, by = join_by(spilleby == name)) %>% 
-  mutate(longitude = if_else(duplicated(str_c(longitude, latitude)), longitude+0.15, longitude), .by = "fiktiv_kamprunde")
-  
-## Tjekker om der mangler geografi på byer
-manglende_geo <- kampprogram_geo %>% 
-  filter(is.na(longitude) | is.na(latitude)) %>% 
-  distinct(spilleby) %>% 
-  pull()
+# ## finder byer
+# tyske_byer_geo <- readRDS(here("fodbold_kalender", "data", "tyske_byer.Rds"))
+# 
+# tyske_byer_geo_filter <- tyske_byer_geo %>% 
+#   semi_join(kampprogram_tyskland, by = c("name" = "spilleby")) %>% 
+#   filter(population == max(population), .by = "name")
 
 
 ```
-
-`r if (kampprogram_klar && !is_empty(manglende_geo)){paste0("Der er spillebyer, hvor der ikke er geo-data. Det drejer sig om: ", manglende_geo)}`
 
 
 ```{r}
@@ -81,8 +60,8 @@ Sys.setlocale("LC_TIME", "da_DK.UTF-8")
 
 ## Laver plots
 
-kampprogram_nested <- kampprogram_geo %>% 
-  # mutate(liga = factor(liga, levels = c("Bundesliga", "2. Bundesliga", "3. Liga"))) %>% 
+kampprogram_nested <- kampprogram_tyskland %>% 
+  mutate(liga = factor(liga, levels = c("Bundesliga", "2. Bundesliga", "3. Liga"))) %>% 
   nest(.by = c("fiktiv_kamprunde"), .key = "kampprogram") %>% 
   mutate(dato = map_dbl(kampprogram, ~min(.x$kampdato)) %>% 
            as.Date()) %>% 
@@ -90,9 +69,9 @@ kampprogram_nested <- kampprogram_geo %>%
                       geom_sf(data = tyskland_geo_json) +
                       geom_point_interactive(data = .x, aes(x = longitude, y = latitude, colour = liga,
                                                             tooltip=sprintf("%s<br/>%s&nbsp;%s",kamp,format(kampdato, "%d/%m-%Y"), kamptidspunkt))) +
-                      # scale_color_manual(values = c("Bundesliga" = "black",
-                      #                               "2. Bundesliga" = "red",
-                      #                               "3. Liga" = "yellow")) +
+                      scale_color_manual(values = c("Bundesliga" = "black",
+                                                    "2. Bundesliga" = "red",
+                                                    "3. Liga" = "yellow")) +
                       ggtitle(paste("Kampprogram for kamprunde med start:", format(unique(.x$min_ugedag), "%A %d %B %Y"))) +
                       theme(legend.position = "right",
                             legend.title = element_blank(),
@@ -117,7 +96,7 @@ plots <- kampprogram_nested %>%
 
 ```
 
-OBS! Kamptidspunkter er ikke altid retvisende for regionalliga.
+OBS! Kamptidspunkter bør tjekkes efter. For 3. Liga især er de ikke altid retvisende.
 
 Seneste opdatering: `r format(with_tz(Sys.time(), "CET"), "%d/%m/%Y %H:%M:%S")`
 
